src/test/deca/syntax/invalid/declField-private.synt
declField-private.deca:2:
